# VulkanSetup

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  basescript.txt  imgui.ini
include/: CMakeLists.txt
include/efsw/: premake4.lua  premake5.lua
include/glm/: CMakeLists.txt
include/imgui/: CMakeLists.txt
src/: main.cpp  test.cpp
src/core/: actor_registry.hpp  ecs.hpp  ecs_defines.hpp  imageloader.cpp  imageloader.hpp  input.cpp  input.hpp  systemactor.hpp
src/engine/: camera_t.cpp  camera_t.hpp  model_t.cpp  model_t.hpp  modelloader_t.cpp  modelloader_t.hpp  transform_t.hpp
src/engine/UI/: asset_handler_t.cpp  asset_handler_t.hpp  file_system_t.cpp  file_system_t.hpp  script_handler.cpp  script_handler_t.hpp
src/shaders/: compiler.bat  test.frag  test.frag.spv  test.vert  test.vert.spv
src/vk/: vk_application.cpp  vk_application.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_context.cpp  vk_context.hpp  vk_device.cpp  vk_device.hpp  vk_engine.cpp  vk_engine.hpp  vk_offscreen.cpp  vk_offscreen.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_window.cpp  vk_window.hpp
